[package]
name = "pxn_crate"
version = "0.1.1"
license = "GPL-3.0"
edition = "2021"
description = "Common library for PoiXson projects"
repository = "https://github.com/PoiXson/pxnCrate-mirror.git"

[dependencies]
log        = "0.*"
env_logger = "0.*"
log-panics = "2.*"
tempfile   = "3.*"
chrono     = "0.*"
